--- a/index.html
+++ b/index.html
@@ -192,6 +192,24 @@
         </section>
         <!-- USEFUL END -->
 
+        <!-- FEEDBACK START -->
+        <section class="feedback">
+            <div class="feedback-wrapper">
+                <div class="feedback-maps" style="position:relative;overflow:hidden;"><a href="https://yandex.uz/maps/org/181817256792/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Muhammad al-Xorazmiy nomidagi Toshkent Axborot Texnologiyalari Universiteti</a><a class="feedback-iframe" href="https://yandex.uz/maps/10335/tashkent/category/university/184106140/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">OO‘Yu  Toshkentda</a><iframe class="feedback-iframe" src="https://yandex.uz/map-widget/v1/?ll=69.286815%2C41.340865&mode=search&oid=181817256792&ol=biz&z=16.58"  style="position:relative;"></iframe></div>
+                <div class="feedback-content">
+                    <form class="feedback-form">
+                        <h2 class="feedback-form__title">Обратная связь</h2>
+                        <p class="feedback-form__desc">При возникновении вопросов по поводу работы <br> клиники или консультаций, заполните форму ниже:</p>
+                        <input class="feedback-form__input" minlength="6" type="text" placeholder="Ваше имя" required>
+                        <input class="feedback-form__input" minlength="6" type="email" placeholder="Email для обратной связи" required>
+                        <textarea class="feedback-form__input feedback-form__textarea" minlength="10" cols="30" rows="7" placeholder="Например: в каком возрасте можно прививать от бешенства?" required></textarea>
+                        <button class="feedback-form__btn" type="reset">Задать нам вопрос</button>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- FEEDBACK END -->
+
     </main>
     <!-- MAIN END -->
     
