--- a/index.html
+++ b/index.html
@@ -212,6 +212,57 @@
 
     </main>
     <!-- MAIN END -->
+
+    <!-- FOOTER START -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="site-footer__wrapper">
+                <div class="site-footer__all-link">
+                    <a class="site-footer__link" href="#">
+                        <img class="site-footer__link-logo" src="./images/logo-vet.svg" alt="header logo">
+                    </a>
+                    <ul class="site-footer__list">
+                        <li class="site-footer__item">
+                            <a class="site-footer__link" href="#">Главная</a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a class="site-footer__link" href="#">О Клинике</a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a class="site-footer__link" href="#">Наши Услуги</a>
+                        </li>
+                    </ul>
+                    <ul class="site-footer__list">
+                        <li class="site-footer__item">
+                            <a class="site-footer__link" href="#">Полезные Статьи</a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a class="site-footer__link" href="#">FAQ</a>
+                        </li>
+                        <li class="site-footer__item">
+                            <a class="site-footer__link" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="site-footer__linkes">
+                    <span class="site-footer__linkes-time">
+                        Пн - Пт 8:00 - 18:00 <br>
+                        Сб - Вс 8:00 - 14:00
+                    </span>
+                    <span class="site-footer__adress">
+                        <a class="site-footer__adress-link" href="#">г. Мариуполь, <br> проспект Победы, 48а</a>
+                    </span>
+                    <span class="site-footer__contact">
+                        <a class="site-footer__contact-link" href="#">(067) 634 -75 - 74</a>
+                        <a class="site-footer__contact-link" href="#">(0637) 57 - 01 - 31</a>
+                        <a class="site-footer__contact-link" href="#">(098) 266 - 43 - 89</a>
+                    </span>
+                </div>
+            </div>
+            <p class="site-footer__reserved">© 2020 example. All Rights Reserved.</p>
+        </div>
+    </footer>
+    <!-- FOOTER END -->
     
 </body>
 </html>
